---
title: Timestampable
---

classDiagram
    direction TB

    class EntityInterface {
        <<Interface>>
    }

    class TimestampableInterface {
        <<Interface>>
        +getCreatedAt() ?DateTimeInterface
        +getCreatedBy() ?string
        +getUpdatedAt() ?DateTimeInterface
        +getUpdatedBy() ?string
        +updateTimestampable(DateTimeImmutable date, string user)
    }

    class Calculation {
    }
    class CalculationState {
    }
    class Category {
    }
    class Group {
    }
    class Product {
    }
    class User {
    }
    class GlobalMargin {
    }

    EntityInterface <|.. TimestampableInterface
    TimestampableInterface <|.. Calculation
    TimestampableInterface <|.. CalculationState
    TimestampableInterface <|.. Group
    TimestampableInterface <|.. Category
    TimestampableInterface <|.. Product
    TimestampableInterface <|.. User
    TimestampableInterface <|.. GlobalMargin

    click EntityInterface call nodeCallback()
    click Calculation call nodeCallback()
    click CalculationState call nodeCallback()
    click Group call nodeCallback()
    click Category call nodeCallback()
    click Product call nodeCallback()
    click User call nodeCallback()
